# zmq_client_server

./: .gitignore  README.md  setup.cfg  zmq_client.py  zmq_server.py
.github/workflows/: pre-release.yaml  publish_to_pypi.yml
src/: __init__.py  zmq_client.py  zmq_server.py
src/zmq_python/: __init__.py
src/zmq_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
