[metadata]
name = zmq_python
version = 0.0.1
author = perry
author_email = noemail@example.com
description = Python ZMQ Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = private
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    zmq

[options.packages.find]
where = src

[options.package_data]
* = *.ini, *.json
