[metadata]
name = zmq_clientserver
version = 0.0.2
author = perry
author_email = noemail@example.com
description = Python ZMQ Client/Server Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/perrytec/zmq_client_server.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    zmq

[options.packages.find]
where = src

[options.package_data]
* = *.ini, *.json
